@@ -16,6 +16,7 @@ Others:
 - fix an off by one bug in "cp url XX" 
 - Ansicat: Fix incorrectly identifying RSS feeds as XHTML when there was no entry
 - Fix sync hanging on gopher interactive prompt (by JMCS)
+- Fix crash when trying to parse HTML without BS4 (reported by Hoël Bézier)
 
 ## 2.8 - November 13th 2025
 - New option "images_size" to use with "set" (idea by aelius)
